# qwen35-moe-offload

./: .gitignore  AUTORESEARCH_GOAL.md  Cargo.toml  FINDINGS.md  PHASE3_RESULTS.md  PHASE7_SUMMARY.md  PHASE9.md  PLAN.md  README.md  bench.py  bench_cuda.py  bench_cuda2.py  bench_exp16.py  bench_exp17.py  bench_exp23.py  bench_hybrid.py  bench_kv.py  bench_polarquant.py  bench_qjl.py  bench_real.py  bench_rust_ffi.py  driver.py  driver2.py  driver3.py  driver4.py  driver5.py  experiments_p4v2.jsonl  harness.py  orchestrate_phase4.py  orchestrate_phase4b.py  orchestrate_phase4c.py  orchestrate_phase5.py  orchestrate_phase6.py  orchestrate_phase8.py  parity_test.py  phase5_log.txt  phase5_log2.txt  phase5_plan.json  phase8_log.txt  program.md  (+26 more)
crates/bench/: Cargo.toml  build.rs  shim.c
crates/bench/src/: main.rs
crates/polarquant/: Cargo.toml
crates/polarquant/benches/: throughput.rs
crates/polarquant/src/: hadamard.rs  lib.rs  quantize.rs
crates/polarquant/tests/: integration.rs
crates/qjl/: Cargo.toml
crates/qjl/src/: estimator.rs  lib.rs  transform.rs
crates/qjl/tests/: integration.rs
docs/: apple-flash-mapping.md  architecture.md  kv-compression.md
results/: polarquant_20260326_233758.json  qjl_20260326_233849.json
scripts/: expert_cache.py  measure_nvme.py  polar_kv.py
tests/: test_polar_kv.py
