[project]
name = "qwen35_moe_offload"
version = "0.1.0"
description = "Efficient Qwen3.5-35B-A3B inference on RTX 3070 8GB using flash-memory MoE expert offloading"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3.0",
    "transformers>=4.45.0",
    "accelerate>=0.30.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.23.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
llama = ["llama-cpp-python>=0.2.70"]
dev = ["pytest>=8.0.0", "matplotlib>=3.8.0"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
