[package]
name = "polarquant"
version = "0.1.0"
edition = "2021"
description = "PolarQuant KV cache compression — polar coordinate quantization with random Hadamard preconditioner (arXiv:2502.02617)"
license = "MIT"

[features]
default = []
cuda = ["dep:cudarc"]

[dependencies]
ndarray = "0.16"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
cudarc = { version = "0.12", optional = true }

[dev-dependencies]
approx = "0.5"
