[package]
name = "qjl"
version = "0.1.0"
edition = "2021"
description = "QJL (Quantized Johnson-Lindenstrauss) KV cache compression — asymmetric attention score estimation via JL sketches (arXiv:2406.03482)"
license = "MIT"

[features]
default = []
cuda = ["dep:cudarc"]

[dependencies]
ndarray = "0.16"
rand = { version = "0.8", features = ["std_rng"] }
rand_chacha = "0.3"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
cudarc = { version = "0.12", optional = true }

[dev-dependencies]
approx = "0.5"
